--- a/app/globals.css
+++ b/app/globals.css
@@ -45,7 +45,7 @@
 
 :root {
   --radius: 0.5rem;
-  --background: oklch(100% 0.00011 271.152);
+
   --foreground: oklch(28.306% 0.00292 16.724);
   --card: oklch(100% 0.00011 271.152);
   --card-foreground: oklch(0.145 0 0);
@@ -65,9 +65,9 @@
   --ring: oklch(0.708 0 0);
   --chart-1: oklch(26.823% 0.04737 259.97);
   --chart-2: oklch(53.501% 0.06243 264.319);
-  --chart-3: oklch(0.398 0.07 227.392);
-  --chart-4: oklch(44.401% 0.09744 302.135);
-  --chart-5: oklch(70% 0.16 35);
+  --chart-3: oklch(0.69 0.18 281.4);
+  --chart-4: oklch(0.703 0.151 162.33);
+  --chart-5: oklch(0.72 0.22 25.2);
   --sidebar: oklch(0.985 0 0);
   --sidebar-foreground: oklch(0.145 0 0);
   --sidebar-primary: oklch(0.205 0 0);
@@ -76,6 +76,16 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+  --background: oklch(100% 0.00011 271.152);
+  --background-gradient: linear-gradient(
+    to bottom right,
+    var(--slate-10, #f8fafc),
+    var(--sky-10, #fcfeff),
+    var(--sky-10, #ecf8ff)
+  );
+}
+.bg-background {
+  background: var(--background-gradient) !important;
 }
 
 .dark {
@@ -116,7 +126,31 @@
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
+  }
+
+  /* Global H1 style */
+  h1 {
+    @apply text-4xl font-bold bg-gradient-to-r from-slate-800 to-primary bg-clip-text text-transparent;
+  }
+
+  /* Sonner toast styles */
+  [data-sonner-toast][data-type='success'] {
+    background: #fff !important;
+    color: rgb(0, 88, 40) 1 !important;
+    border: none !important;
+  }
+
+  [data-sonner-toast][data-type='error'] {
+    color: #b60c0c !important;
+    background: #fff !important;
+    border: none !important;
+  }
+  [data-sonner-toast][data-type='info'] {
+    color: #3b82f6 !important;
+    background: #fff !important;
+    border: none !important;
   }
 }
