--- a/app/globals.css
+++ b/app/globals.css
@@ -65,7 +65,7 @@
   --ring: oklch(0.708 0 0);
   --chart-1: oklch(26.823% 0.04737 259.97);
   --chart-2: oklch(53.501% 0.06243 264.319);
-  --chart-3: oklch(0.69 0.18 281.4);
+  --chart-3: oklch(70.64% 0.15812 282.397);
   --chart-4: oklch(0.703 0.151 162.33);
   --chart-5: oklch(0.72 0.22 25.2);
   --sidebar: oklch(0.985 0 0);
